TAG: homologyload-tr11886-22
DATE:03/09/2015
STAFF: sc
CHANGES: TR11888 - 
1) US126 - change secondary source hgnc and hg text to hg and hgnc 
    (reverse order)
2) US101 - add postgres/sybase flipping code to all python scripts - tested for sybase only, US101 pulled from sprint 4 because of dependencies.

TAG: homologyload-tr11886-21
DATE:03/04/2015
STAFF: sc
CHANGES: TR11888 - Added:
1) preprocessXenbase.py
2) preprocessXenbase.sh
3) xenbaseload.config

TAG: homologyload-tr11886-20
DATE:03/04/2015
STAFF: sc
CHANGES: code cleanup - debug removal - convert all NCBI references to EG
	for consistency

TAG: homologyload-tr11886-19
DATE:02/27/2015
STAFF: sc
CHANGES: HGNC/HG hybrid homology
1) preprocessHybrid.py - change property values
2) write temp report for Sue

TAG: homologyload-tr11886-18
DATE:02/17/2015
STAFF: sc
CHANGES: HGNC/HG hybrid homology
1) homologyload.py - added deletion of MGI_Property records

TAG: homologyload-tr11886-17
DATE:02/17/2015
STAFF: sc
CHANGES: HGNC/HG hybrid homology
1) All configs -  removed references to LOAD_ACCESSION 
2) removed ACCESSION_BCP  from configs where not applicable

TAG: homologyload-tr11886-16
DATE:02/17/2015
STAFF: sc
CHANGES: HGNC/HG hybrid homology 
1) hybrid.config.default - new
2) homologyload.sh - factored code out inot runSanityChecks()
     Added bcp of MGI_Property.bcp if it exists
3) homologyload.py - added handling of properties when property attributes
    are configured, factored out init() function
4) preprocessGEISHA.* - removed debug, comments
5) preprocessHGNC.* - removed debug, comments
6) preprocessHomologene.* - removed debug, comments
7) preprocessHybrid.py - added Cluster.toLoadFormat method
    added closeFiles function, removed debug, added handling of properties
8) preprocessZFIN.* - removed debug, comments
9) preprocessHybrid.sh - added, development testing script

TAG: homologyload-tr11886-15
DATE:01/28/2015
STAFF: sc
CHANGES: documenation tweaks