@@ -172,7 +172,9 @@ runSanityChecks()
     len=`cat ${INPUT_FILE} | wc -l | sed 's/ //g'`
     if [ ${len} -lt ${MIN_LENGTH} ]
     then
-       echo "\n\nInput file ${INPUT_FILE} does not have minimum length. Required: ${MIN_LENGTH} Found: ${len}" | tee -a ${SANITY_RPT}
+	echo "" >> ${SANITY_RPT}
+	echo "" >> ${SANITY_RPT}
+       echo "Input file ${INPUT_FILE} does not have minimum length. Required: ${MIN_LENGTH} Found: ${len}" | tee -a ${SANITY_RPT}
        FILE_ERROR=1
     fi
 
@@ -189,7 +191,8 @@ runSanityChecks()
 	shutDown
 	exit 1
     else
-	echo "No sanity errors in ${INPUT_FILE} file\n" >> ${SANITY_RPT}
+	echo "No sanity errors in ${INPUT_FILE} file" >> ${SANITY_RPT}
+	echo "" >> ${SANITY_RPT}
     fi
 
 }
